--- a/project/src/main/webapp/resources/css/admin/goodsEnroll.css
+++ b/project/src/main/webapp/resources/css/admin/goodsEnroll.css
@@ -43,8 +43,8 @@ ul{
 .admin_top_wrap{
     height:110px;
     line-height: 110px;
-    margin-bottom: 15px;
     background-color: #5080bd;
+    margin-bottom:15px;
 }
 .admin_top_wrap>span{
     margin-left: 30px;
@@ -86,10 +86,10 @@ ul{
 .admin_navi_wrap li a:active {color: black;}
 .admin_navi_wrap li a:hover {color: black;}
 .admin_navi_wrap li a {text-decoration: none;}
-/* 
+ 
 .admin_list_01{
     background-color: #c8c8c8;
-} */
+} 
  
  
 /* 관리자페이지 컨텐츠 영역 */
@@ -99,11 +99,14 @@ ul{
     min-height: 700px;
     
 }
-.admin_content_wrap div{
-    margin-top: 280px;
-    text-align: center;
-    font-size: 50px;
+.admin_content_subject{            /* 관리자 컨텐츠 제목 영역 */
+    font-size: 40px;
     font-weight: bolder;
+    padding-left: 15px;
+    background-color: #6AAFE6;
+    height: 80px;
+    line-height: 80px;
+    color: white;    
 }
  
  
