--- a/project/src/main/webapp/resources/css/admin/goodsDetail.css
+++ b/project/src/main/webapp/resources/css/admin/goodsDetail.css
@@ -1,50 +1,51 @@
 @charset "UTF-8";
 *{
-    margin: 0;
-    padding:0;
+	margin: 0;
+	padding:0;
 }
 a{
-    text-decoration: none;
+	text-decoration: none;
 }
+
 ul{
     list-style: none;
 }
 /* 화면 전체 렙 */
 .wrapper{
-    width: 100%;
+	width: 100%;
 }
 /* content 랩 */
 .wrap{
-    width : 1080px;
-    margin: auto;
+	width : 1080px;
+	margin: auto;
 }
 /* 홈페이지 기능 네비 */ 
 .top_gnb_area{
-    width: 100%;
+	width: 100%;
     height: 50px;
     background-color: #f0f0f1;
     position:relative;
 }
 .top_gnb_area .list{
-    position: absolute;
+	position: absolute;
     top: 0px;
     right: 0;
     
 }
 .top_gnb_area .list li{
-    list-style: none;    
+	list-style: none;	
     float : left;
     padding: 13px 15px 0 10px;
     font-weight: 900;
     cursor: pointer;
 }
- 
+
 /* 관리제 페이지 상단 현페이지 정보 */
 .admin_top_wrap{
     height:110px;
     line-height: 110px;
     background-color: #5080bd;
-    margin-bottom:15px;
+    margin-bottom: 15px;
 }
 .admin_top_wrap>span{
     margin-left: 30px;
@@ -58,7 +59,7 @@ ul{
     
     
 }
- 
+
 /* 관리자페이지 네비 영역 */
 .admin_navi_wrap{
     width: 20%;
@@ -87,29 +88,28 @@ ul{
 .admin_navi_wrap li a:hover {color: black;}
 .admin_navi_wrap li a {text-decoration: none;}
  
-.admin_list_01{
+.admin_list_02{
     background-color: #c8c8c8;
 } 
- 
- 
+
+
 /* 관리자페이지 컨텐츠 영역 */
 .admin_content_wrap{
     width: 80%;
     float:left;
     min-height: 700px;
-    
 }
-.admin_content_subject{            /* 관리자 컨텐츠 제목 영역 */
+.admin_content_subject{	/* 관리자 컨텐츠 제목 영역 */
     font-size: 40px;
     font-weight: bolder;
     padding-left: 15px;
     background-color: #6AAFE6;
     height: 80px;
     line-height: 80px;
-    color: white;    
+    color: white;	
 }
- 
- /* 관리자 컨텐츠 메인 영역 */
+
+/* 관리자 컨텐츠 메인 영역 */
 .form_section{
 	width: 95%;
     margin-left: 2%;
@@ -135,20 +135,9 @@ ul{
     font-size: 20px;
     padding: 5px 1%;
 }
-.form_section_content select{
-	width: 98%;
-    height: 35px;
-    font-size: 20px;
-    text-align-last: center;
-}
 
-/* ckeditor 높이 */
-.ck-content {
-    height: 170px;
-}
-
-/* 캘린더 css 설정 */
-.ui-datepicker-trigger {						
+							
+.ui-datepicker-trigger {			/* 캘린더 css 설정 */
     margin-left: 25px;
     width: 14%;
     height: 38px;
@@ -157,13 +146,8 @@ ul{
     font-size: 15px;
     cursor:pointer;
 }
-input[name='publeYear'] {
-    width: 80%;
-    text-align: center;
-}
 
-/* 작가 선택 css 설정 */
-.authorId_btn {						
+.authorId_btn {						/* 작가 선택 css 설정 */
     margin-left: 20px;
     width: 14%;
     height: 38px;
@@ -172,41 +156,9 @@ input[name='publeYear'] {
     font-size: 15px;
     cursor:pointer;
 }
-#authorName_input {
-    width: 80%;
-    text-align: center;
-}
 
-/* 카테고리 css 설정 */
-.form_section_content select {		
-    width: 92%;
-    height: 35px;
-    font-size: 17px;
-    text-align-last: center;
-    margin-left: 5px;
-}
-.cate_wrap span {
-    font-weight: bold;
-    position: relative;
-}
-.cate_wrap:not(:first-child) {
-    margin-top: 20px;
-}
-
-/* 입력란 공란 경고 태그 */
-.ck_warn{						
-	display: none;
-    padding-top: 10px;
-    text-align: center;
-    color: #e05757;
-    font-weight: 300;    
-}
-
-/* 할인 가격 문구 */
-.step_val{						
-	display: block;
-    padding-top: 5px;
-    font-weight: 500;
+.ck-content {						/* ckeditor 높이 */
+    height: 170px;
 }
 
 /* 버튼 영역 */
@@ -222,15 +174,31 @@ input[name='publeYear'] {
     line-height: 40px;
 }
 .enroll_btn{
-	background-color: #dbdde2;
 	margin-left:15px;
 }
 #enrollBtn:hover {
     background-color: #c9cbd0;
 }
- 
- 
+
+/* 카테고리 css 설정 */
+.form_section_content select {		
+    width: 92%;
+    height: 35px;
+    font-size: 17px;
+    text-align-last: center;
+    margin-left: 5px;
+}
+.cate_wrap span {
+    font-weight: 600;
+}
+.cate_wrap:not(:first-child) {
+    margin-top: 20px;
+}
+
+
+
+
 /* float 속성 해제 */
 .clearfix{
-    clear: both;
+	clear: both;
 }
