--- a/project/src/main/webapp/resources/css/admin/goodsModify.css
+++ b/project/src/main/webapp/resources/css/admin/goodsModify.css
@@ -1,236 +1,298 @@
 @charset "UTF-8";
-*{
-    margin: 0;
-    padding:0;
+
+* {
+	margin: 0;
+	padding: 0;
 }
-a{
-    text-decoration: none;
+
+a {
+	text-decoration: none;
 }
-ul{
-    list-style: none;
+
+ul {
+	list-style: none;
 }
 /* 화면 전체 렙 */
-.wrapper{
-    width: 100%;
+.wrapper {
+	width: 100%;
 }
 /* content 랩 */
-.wrap{
-    width : 1080px;
-    margin: auto;
+.wrap {
+	width: 1080px;
+	margin: auto;
 }
-/* 홈페이지 기능 네비 */ 
-.top_gnb_area{
-    width: 100%;
-    height: 50px;
-    background-color: #f0f0f1;
-    position:relative;
+/* 홈페이지 기능 네비 */
+.top_gnb_area {
+	width: 100%;
+	height: 50px;
+	background-color: #f0f0f1;
+	position: relative;
 }
-.top_gnb_area .list{
-    position: absolute;
-    top: 0px;
-    right: 0;
-    
+
+.top_gnb_area .list {
+	position: absolute;
+	top: 0px;
+	right: 0;
 }
-.top_gnb_area .list li{
-    list-style: none;    
-    float : left;
-    padding: 13px 15px 0 10px;
-    font-weight: 900;
-    cursor: pointer;
+
+.top_gnb_area .list li {
+	list-style: none;
+	float: left;
+	padding: 13px 15px 0 10px;
+	font-weight: 900;
+	cursor: pointer;
 }
- 
+
 /* 관리제 페이지 상단 현페이지 정보 */
-.admin_top_wrap{
-    height:110px;
-    line-height: 110px;
-    background-color: #5080bd;
-    margin-bottom:15px;
+.admin_top_wrap {
+	height: 110px;
+	line-height: 110px;
+	background-color: #5080bd;
+	margin-bottom: 15px;
 }
-.admin_top_wrap>span{
-    margin-left: 30px;
-    display:inline-block;
-    color: white;
-    font-size: 50px;
-    font-weight: bolder;
+
+.admin_top_wrap>span {
+	margin-left: 30px;
+	display: inline-block;
+	color: white;
+	font-size: 50px;
+	font-weight: bolder;
 }
 /* 관리자 wrap(네비+컨텐츠) */
-.admin_wrap{
-    
-    
+.admin_wrap {
+	
 }
- 
+
 /* 관리자페이지 네비 영역 */
-.admin_navi_wrap{
-    width: 20%;
-    height: 300px;
-    float:left;
-    height: 100%;
+.admin_navi_wrap {
+	width: 20%;
+	height: 300px;
+	float: left;
+	height: 100%;
 }
-.admin_navi_wrap li{
-    display: block;
-    height: 80px;
-    line-height: 80px;
-    text-align: center;
-}
-.admin_navi_wrap li a{
-    display: block;
-    height: 100%;
-    width: 95%;
-    margin: 0 auto;
-    cursor: pointer;
-    font-size: 30px;
-    font-weight: bolder;
-}
-.admin_navi_wrap li a:link {color: black;}
-.admin_navi_wrap li a:visited {color: black;}
-.admin_navi_wrap li a:active {color: black;}
-.admin_navi_wrap li a:hover {color: black;}
-.admin_navi_wrap li a {text-decoration: none;}
- 
-.admin_list_02{
-    background-color: #c8c8c8;
-} 
- 
- 
-/* 관리자페이지 컨텐츠 영역 */
-.admin_content_wrap{
-    width: 80%;
-    float:left;
-    min-height: 700px;
-    
-}
-.admin_content_subject{            /* 관리자 컨텐츠 제목 영역 */
-    font-size: 40px;
-    font-weight: bolder;
-    padding-left: 15px;
-    background-color: #6AAFE6;
-    height: 80px;
-    line-height: 80px;
-    color: white;    
-}
- 
- /* 관리자 컨텐츠 메인 영역 */
-.form_section{
-	width: 95%;
-    margin-left: 2%;
-    margin-top: 20px;
-    border: 1px solid #dbdde2;
-    background-color: #efefef;	
-}
-.form_section_title{
-	padding: 20px 35px;	
-}
-.form_section_title label{
+
+.admin_navi_wrap li {
 	display: block;
-    font-size: 20px;
-    font-weight: 800;
+	height: 80px;
+	line-height: 80px;
+	text-align: center;
 }
-.form_section_content{
+
+.admin_navi_wrap li a {
+	display: block;
+	height: 100%;
+	width: 95%;
+	margin: 0 auto;
+	cursor: pointer;
+	font-size: 30px;
+	font-weight: bolder;
+}
+
+.admin_navi_wrap li a:link {
+	color: black;
+}
+
+.admin_navi_wrap li a:visited {
+	color: black;
+}
+
+.admin_navi_wrap li a:active {
+	color: black;
+}
+
+.admin_navi_wrap li a:hover {
+	color: black;
+}
+
+.admin_navi_wrap li a {
+	text-decoration: none;
+}
+
+.admin_list_02 {
+	background-color: #c8c8c8;
+}
+
+/* 관리자페이지 컨텐츠 영역 */
+.admin_content_wrap {
+	width: 80%;
+	float: left;
+	min-height: 700px;
+}
+
+.admin_content_subject { /* 관리자 컨텐츠 제목 영역 */
+	font-size: 40px;
+	font-weight: bolder;
+	padding-left: 15px;
+	background-color: #6AAFE6;
+	height: 80px;
+	line-height: 80px;
+	color: white;
+}
+
+/* 관리자 컨텐츠 메인 영역 */
+.form_section {
+	width: 95%;
+	margin-left: 2%;
+	margin-top: 20px;
+	border: 1px solid #dbdde2;
+	background-color: #efefef;
+}
+
+.form_section_title {
 	padding: 20px 35px;
-    border-top: 1px solid #dbdde2;	
 }
-.form_section_content input{
-	width: 98%;
-    height: 35px;
-    font-size: 20px;
-    padding: 5px 1%;
+
+.form_section_title label {
+	display: block;
+	font-size: 20px;
+	font-weight: 800;
 }
-.form_section_content select{
+
+.form_section_content {
+	padding: 20px 35px;
+	border-top: 1px solid #dbdde2;
+}
+
+.form_section_content input {
 	width: 98%;
-    height: 35px;
-    font-size: 20px;
-    text-align-last: center;
+	height: 35px;
+	font-size: 20px;
+	padding: 5px 1%;
+}
+
+.form_section_content select {
+	width: 98%;
+	height: 35px;
+	font-size: 20px;
+	text-align-last: center;
 }
 
 /* ckeditor 높이 */
 .ck-content {
-    height: 170px;
+	height: 170px;
 }
 
 /* 캘린더 css 설정 */
-.ui-datepicker-trigger {						
-    margin-left: 25px;
-    width: 14%;
-    height: 38px;
-    font-weight: 600;
-    background-color: #dfe8f5;
-    font-size: 15px;
-    cursor:pointer;
+.ui-datepicker-trigger {
+	margin-left: 25px;
+	width: 14%;
+	height: 38px;
+	font-weight: 600;
+	background-color: #dfe8f5;
+	font-size: 15px;
+	cursor: pointer;
 }
+
 input[name='publeYear'] {
-    width: 80%;
-    text-align: center;
+	width: 80%;
+	text-align: center;
 }
 
 /* 작가 선택 css 설정 */
-.authorId_btn {						
-    margin-left: 20px;
-    width: 14%;
-    height: 38px;
-    font-weight: 600;
-    background-color: #dfe8f5;
-    font-size: 15px;
-    cursor:pointer;
+.authorId_btn {
+	margin-left: 20px;
+	width: 14%;
+	height: 38px;
+	font-weight: 600;
+	background-color: #dfe8f5;
+	font-size: 15px;
+	cursor: pointer;
 }
+
 #authorName_input {
-    width: 80%;
-    text-align: center;
+	width: 80%;
+	text-align: center;
 }
 
 /* 카테고리 css 설정 */
-.form_section_content select {		
-    width: 92%;
-    height: 35px;
-    font-size: 17px;
-    text-align-last: center;
-    margin-left: 5px;
+.form_section_content select {
+	width: 92%;
+	height: 35px;
+	font-size: 17px;
+	text-align-last: center;
+	margin-left: 5px;
 }
+
 .cate_wrap span {
-    font-weight: bold;
-    position: relative;
+	font-weight: bold;
+	position: relative;
 }
+
 .cate_wrap:not(:first-child) {
-    margin-top: 20px;
+	margin-top: 20px;
 }
 
 /* 입력란 공란 경고 태그 */
-.ck_warn{						
+.ck_warn {
 	display: none;
-    padding-top: 10px;
-    text-align: center;
-    color: #e05757;
-    font-weight: 300;    
+	padding-top: 10px;
+	text-align: center;
+	color: #e05757;
+	font-weight: 300;
 }
 
 /* 할인 가격 문구 */
-.step_val{						
+.step_val {
 	display: block;
-    padding-top: 5px;
-    font-weight: 500;
+	padding-top: 5px;
+	font-weight: 500;
+}
+
+/* 상품 이미지 */
+#result_card img {
+	max-width: 100%;
+	height: auto;
+	display: block;
+	padding: 5px;
+	margin-top: 10px;
+	margin: auto;
+}
+
+#result_card {
+	position: relative;
+}
+
+.imgDeleteBtn {
+	position: absolute;
+	top: 0;
+	right: 5%;
+	background-color: #ef7d7d;
+	color: wheat;
+	font-weight: 900;
+	width: 30px;
+	height: 30px;
+	border-radius: 50%;
+	line-height: 26px;
+	text-align: center;
+	border: none;
+	display: block;
+	cursor: pointer;
 }
 
 /* 버튼 영역 */
-.btn_section{
+.btn_section {
 	text-align: center;
 	margin: 40px 0;
 }
-.btn{
-    min-width: 180px;
-    padding: 4px 30px;
-    font-size: 25px;
-    font-weight: 600;
-    line-height: 40px;
+
+.btn {
+	min-width: 180px;
+	padding: 4px 30px;
+	font-size: 25px;
+	font-weight: 600;
+	line-height: 40px;
 }
-.enroll_btn{
+
+.enroll_btn {
 	background-color: #dbdde2;
-	margin-left:15px;
+	margin-left: 15px;
 }
+
 #enrollBtn:hover {
-    background-color: #c9cbd0;
+	background-color: #c9cbd0;
 }
- 
- 
+
 /* float 속성 해제 */
-.clearfix{
-    clear: both;
+.clearfix {
+	clear: both;
 }
