--- a/project/src/main/webapp/resources/css/main.css
+++ b/project/src/main/webapp/resources/css/main.css
@@ -1,168 +1,239 @@
 @charset "UTF-8";
-*{
+
+* {
 	margin: 0;
-	padding:0;
+	padding: 0;
 }
-a{
+
+a {
 	text-decoration: none;
 }
 /* 화면 전체 렙 */
-.wrapper{
+.wrapper {
 	width: 100%;
 }
 /* content 랩 */
-.wrap{
-	width : 1080px;
+.wrap {
+	width: 1080px;
 	margin: auto;
 }
-/* 홈페이지 기능 네비 */ 
-.top_gnb_area{
+/* 홈페이지 기능 네비 */
+.top_gnb_area {
 	width: 100%;
-    height: 50px;
-    background-color: #f0f0f1;
-    position: relative;
+	height: 50px;
+	background-color: #f0f0f1;
+	position: relative;
 }
- 
-.top_gnb_area .list{
-    position: absolute;
-    top: 0px;
-    right: 0;
-    
+
+.top_gnb_area .list {
+	position: absolute;
+	top: 0px;
+	right: 0;
 }
- 
-.top_gnb_area .list li{
-    list-style: none;    
-    float : left;
-    padding: 13px 15px 0 10px;
-    font-weight: 900;
-    cursor: pointer;
+
+.top_gnb_area .list li {
+	list-style: none;
+	float: left;
+	padding: 13px 15px 0 10px;
+	font-weight: 900;
+	cursor: pointer;
 }
 /* 로고, 검색, 로그인 */
-.top_area{
+.top_area {
 	width: 100%;
-    height: 150px;
-    /* background-color: #f7f0b9; */
+	height: 150px;
+	/* background-color: #f7f0b9; */
 }
 /* 로고 영역 */
-.logo_area{
-    width: 25%;
-    height: 100%;
-    float:left;
+.logo_area {
+	width: 25%;
+	height: 100%;
+	float: left;
 }
-.logo_area img{
-    width: 100%;
-    height: 100%;
+
+.logo_area img {
+	width: 100%;
+	height: 100%;
 }
 /* 검색 박스 영역 */
-.search_area{
+.search_area {
 	width: 50%;
 	height: 100%;
-	float:left;	
+	float: left;
 }
-.search_wrap{
+
+.search_wrap {
 	width: 100%;
-    height: 100%;
+	height: 100%;
 }
-#searchForm{
+
+#searchForm {
 	width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
-.search_input{
-    display: flex;
-    height: 30%;
-    width: 80%;	
+
+.search_input {
+	display: flex;
+	height: 30%;
+	width: 80%;
 }
-.search_input select{
+
+.search_input select {
 	width: 25%;
-    font-size: 15px;	
+	font-size: 15px;
 }
-.search_input input{
-    margin-left: 10px;
-    width: 57%;	
-    font-size: 18px;
-    padding-left: 2%;
-}
-.search_btn{
+
+.search_input input {
 	margin-left: 10px;
-    width: 17%;
-    border-radius: 14px;
-    font-size: 17px;
-    font-weight: 600;	
+	width: 57%;
+	font-size: 18px;
+	padding-left: 2%;
+}
+
+.search_btn {
+	margin-left: 10px;
+	width: 17%;
+	border-radius: 14px;
+	font-size: 17px;
+	font-weight: 600;
 }
 
 /* 로그인 버튼 영역 */
-.login_area{
+.login_area {
 	width: 25%;
 	height: 100%;
-	display: inline-block;	
-	text-align: center;		
+	display: inline-block;
+	text-align: center;
 }
-.login_button{
+
+.login_button {
 	height: 50%;
-    background-color: #D4DFE6;
-    margin-top: 30px;
-    line-height: 77px;
-    font-size: 40px;
-    font-weight: 900;
-    border-radius: 10px;
-    cursor: pointer;	
-}
-.login_area>span{
-	margin-top: 10px;
-    font-weight: 900;
-    display: inline-block;
-}
-.login_button{
-	height : 50%;
 	background-color: #D4DFE6;
-	margin-top:30px;
+	margin-top: 30px;
+	line-height: 77px;
+	font-size: 40px;
+	font-weight: 900;
+	border-radius: 10px;
+	cursor: pointer;
+}
+
+.login_area>span {
+	margin-top: 10px;
+	font-weight: 900;
+	display: inline-block;
+}
+
+.login_button {
+	height: 50%;
+	background-color: #D4DFE6;
+	margin-top: 30px;
 }
 
 /* 제품 목록 네비 */
-.navi_bar_area{
-	width: 100%;
-    height: 70px;
-    background-color: #7696fd;
+.navi_bar_area {
+  overflow: hidden;
+  background-color: #5e6b9e;
+}
+
+.navi_bar_area a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+  margin-left: 10px;
+}
+
+.dropdown .dropbtn {
+  font-size: 16px;
+  font-weight: bold;  
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+  width:140px;
+}
+
+.dropdown-content {
+  display:none ; 
+  position: absolute;
+  background-color: #f9f9f9;
+  width: 466px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  font-size: 12px;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: inline-block;
+  text-align: left;
+  width: 80px;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.navi_bar_area a:hover, .dropdown:hover .dropbtn {
+  background-color: #475382;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
 }
 
 /* 홈페이지 메인 제품 목록  */
-.content_area{
+.content_area {
 	width: 100%;
-    min-height: 1000px;
+	min-height: 1000px;
 }
 
 /* 로그인 성공 영역 */
-.login_success_area{
-    height: 62%;
-    width: 80%;
-    border: 2px solid #7474ad;
-    border-radius: 15px;
-    margin: 5% auto;
-    padding-top: 5%;
-}
-.login_success_area > span{
-    display : block;
-    text-align: left;
-    margin-left: 10%;
+.login_success_area {
+	height: 62%;
+	width: 80%;
+	border: 2px solid #7474ad;
+	border-radius: 15px;
+	margin: 5% auto;
+	padding-top: 5%;
 }
 
-.login_success_area>a{
-    font-size: 15px;
-    font-weight: 900;
-    display: inline-block;
-    margin-top: 5px;
-    background: #e1e5e8;
-    width: 82px;
-    height: 22px;
-    line-height: 22px;
-    border-radius: 25px;
-    color: #606267;    
+.login_success_area>span {
+	display: block;
+	text-align: left;
+	margin-left: 10%;
+}
+
+.login_success_area>a {
+	font-size: 15px;
+	font-weight: 900;
+	display: inline-block;
+	margin-top: 5px;
+	background: #e1e5e8;
+	width: 82px;
+	height: 22px;
+	line-height: 22px;
+	border-radius: 25px;
+	color: #606267;
 }
 
 /* float 속성 해제 */
-.clearfix{
+.clearfix {
 	clear: both;
 }
