--- a/project/src/main/webapp/resources/css/cart.css
+++ b/project/src/main/webapp/resources/css/cart.css
@@ -379,6 +379,18 @@ th {
 	font-weight: bold;
 }
 
+/* 이미지 */
+.image_wrap {
+	width: 100%;
+	height: 100%;
+}
+
+.image_wrap img {
+	max-width: 85%;
+	height: auto;
+	display: block;
+}
+
 /* 로그인 성공 영역 */
 .login_success_area {
 	height: 62%;
