--- a/project/src/main/webapp/resources/css/cart.css
+++ b/project/src/main/webapp/resources/css/cart.css
@@ -380,15 +380,15 @@ th {
 }
 
 /* 이미지 */
-.image_wrap {
+.image_wrap{
 	width: 100%;
 	height: 100%;
 }
-
-.image_wrap img {
-	max-width: 85%;
-	height: auto;
-	display: block;
+.image_wrap img{
+    max-width: 85%;
+    height: auto;
+    display: block;
+    margin: 0px auto;		
 }
 
 /* 로그인 성공 영역 */
