--- a/project/src/main/webapp/resources/css/member/join.css
+++ b/project/src/main/webapp/resources/css/member/join.css
@@ -5,6 +5,16 @@
 	padding: 0;
 }
 
+body {
+	min-height: 100vh;
+	background: -webkit-gradient(linear, left bottom, right top, from(#92b5db),
+		to(#1d466c));
+	background: -webkit-linear-gradient(bottom left, #92b5db 0%, #1d466c 100%);
+	background: -moz-linear-gradient(bottom left, #92b5db 0%, #1d466c 100%);
+	background: -o-linear-gradient(bottom left, #92b5db 0%, #1d466c 100%);
+	background: linear-gradient(to top right, #92b5db 0%, #1d466c 100%);
+}
+
 /* 화면 전체 렙 */
 .wrapper {
 	width: 100%;
@@ -12,8 +22,17 @@
 
 /* content 랩 */
 .wrap {
-	width: 800px;
-	margin: auto;
+	max-width: 680px;
+	margin: 60px auto;
+	padding: 32px;
+	background: #fff;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	-webkit-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
+	-moz-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
+	box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
+	vertical-align: center;
 }
 /* 페이지 제목 */
 .subjecet {
@@ -161,12 +180,12 @@
 	float: left;
 }
 
-#mail_check_input_box_false{
-    background-color:#ebebe4;
+#mail_check_input_box_false {
+	background-color: #ebebe4;
 }
- 
-#mail_check_input_box_true{
-    background-color:white;
+
+#mail_check_input_box_true {
+	background-color: white;
 }
 
 .mail_check_input {
@@ -188,11 +207,12 @@
 	cursor: pointer;
 }
 
-.correct{
+.correct {
 	color: green;
 }
-.incorrect{
-    color : red;
+
+.incorrect {
+	color: red;
 }
 
 /* 주소 영역 */
@@ -271,7 +291,6 @@
 .join_button_wrap {
 	margin-top: 40px;
 	text-align: center;
-	
 }
 
 .join_button {
@@ -283,36 +302,53 @@
 	color: white;
 }
 
+.mail_overlabCk_button{
+	border: 1px solid black;
+	width: 30%;
+	float: right;
+	line-height: 50px;
+	text-align: center;
+	font-size: 30px;
+	font-weight: 900;
+	background-color: #ececf7;
+	cursor: pointer;
+}
+
 /* 유효성 검사 문구 */
- 
-.final_id_ck{
-    display: none;
+.final_id_ck {
+	display: none;
 }
-.final_pw_ck{
-    display: none;
+
+.final_pw_ck {
+	display: none;
 }
-.final_pwck_ck{
-    display: none;
+
+.final_pwck_ck {
+	display: none;
 }
-.final_name_ck{
-    display: none;
+
+.final_name_ck {
+	display: none;
 }
-.final_mail_ck{
-    display: none;
+
+.final_mail_ck {
+	display: none;
 }
-.final_addr_ck{
-    display: none;
+
+.final_addr_ck {
+	display: none;
 }
 
 /* 비밀번호 확인 일치 유효성검사 */
-.pwck_input_re_1{
-        color : green;
-        display : none;    
+.pwck_input_re_1 {
+	color: green;
+	display: none;
 }
-.pwck_input_re_2{
-        color : red;
-        display : none;    
-}    
+
+.pwck_input_re_2 {
+	color: red;
+	display: none;
+}
 
 /* float 속성 해제 */
 .clearfix {
