--- a/project/src/main/webapp/resources/css/header.css
+++ b/project/src/main/webapp/resources/css/header.css
@@ -2,6 +2,7 @@
 * {
 	margin: 0;
 	padding: 0;
+	font-family: 'Do Hyeon', sans-serif;
 }
 
 a:not([class]) {
@@ -25,7 +26,6 @@ a:not([class]):hover {
 .top_gnb_area {
 	width: 100%;
 	height: 50px;
-	background-color: #f0f0f1;
 	position: relative;
 }
 
@@ -150,8 +150,8 @@ a:not([class]):hover {
 
 .login_success_area>span {
 	display: block;
-	text-align: left;
-	margin-left: 10%;
+	text-align: center;
+	margin-top: 5px;
 }
 
 .login_success_area>a {
