--- a/project/src/main/webapp/resources/css/member/login.css
+++ b/project/src/main/webapp/resources/css/member/login.css
@@ -1,89 +1,68 @@
 @charset "UTF-8";
-*{
-	margin: 0;
-	padding:0;
+
+.login_warn {
+	margin-top: 30px;
+	text-align: center;
+	color: red;
 }
 
-/* 화면 전체 렙 */
-.wrapper{
+html, body {
+	height: 100%;
+}
+
+body {
+	display: flex;
+	align-items: center;
+	padding-top: 40px;
+	padding-bottom: 40px;
+	min-height: 100vh;
+	
+	background: -webkit-gradient(linear, left bottom, right top, from(#92b5db),
+		to(#1d466c));
+	background: -webkit-linear-gradient(bottom left, #92b5db 0%, #1d466c 100%);
+	background: -moz-linear-gradient(bottom left, #92b5db 0%, #1d466c 100%);
+	background: -o-linear-gradient(bottom left, #92b5db 0%, #1d466c 100%);
+	background: linear-gradient(to top right, #92b5db 0%, #1d466c 100%);
+}
+
+.input-form {
+      max-width: 470px;
+
+      margin-top: 80px;
+      padding: 32px;
+
+      background: #fff;
+      -webkit-border-radius: 10px;
+      -moz-border-radius: 10px;
+      border-radius: 10px;
+      -webkit-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
+      -moz-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
+      box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15)
+    }
+
+.form-signin {
 	width: 100%;
-}
-
-/* content 랩 */
-.wrap{
-	width : 800px;
+	max-width: 330px;
+	padding: 15px;
 	margin: auto;
 }
 
-/* 페이지 로고 */
-.logo_wrap{
-	text-align: center;	
-	margin: 150px 0;	
-}
-.logo_wrap>span{
-	font-size : 50px;
-	font-weight: 900;
+.form-signin .checkbox {
+	font-weight: 400;
 }
 
-
-/* 로그인 area */
-.id_input_box{
-	border: 1px solid black;
-	height:31px;
-	padding: 10px 14px;	
-	display: block;
-	width : 80%;
-	margin : auto;	
-}
-.id_input{
-	width:100%;
-	height:100%;
-	border:none;
-	font-size:28px;
+.form-signin .form-floating:focus-within {
+	z-index: 2;
 }
 
-
-.pw_wrap{
-	margin-top: 40px;
-}
-.pw_input_box{
-	border: 1px solid black;
-	height:31px;
-	padding: 10px 14px;	
-	display: block;
-	width : 80%;
-	margin : auto;	
-}
-.pw_iput{
-	width:100%;
-	height:100%;
-	border:none;
-	font-size:28px;
+.form-signin input[type="email"] {
+	margin-bottom: -1px;
+	border-bottom-right-radius: 0;
+	border-bottom-left-radius: 0;
 }
 
-
-.login_button_wrap{
-	margin-top: 40px;
-	text-align: center;
-}
-.login_button{
-	width: 84%;
-    height: 80px;
-    background-color: #6AAFE6;
-    font-size: 40px;
-    font-weight: 900;
-    color: white;
-    margin : auto;
-}
-
-/* 로그인 실패시 경고글 */
-.login_warn{
-    margin-top: 30px;
-    text-align: center;
-    color : red;
-}
-
-/* float 속성 해제 */
-.clearfix{
-	clear: both;
+.form-signin input[type="password"] {
+	margin-bottom: 10px;
+	border-top-left-radius: 0;
+	border-top-right-radius: 0;
 }
