--- a/project/src/main/webapp/resources/css/header.css
+++ b/project/src/main/webapp/resources/css/header.css
@@ -42,11 +42,13 @@ a:not([class]):hover {
 	font-weight: 900;
 	cursor: pointer;
 }
+
 /* 로고, 검색, 로그인 */
 .top_area {
 	width: 100%;
 	height: 150px;
 	/* background-color: #f7f0b9; */
+	margin-top: 80px;
 }
 /* 로고 영역 */
 .logo_area {
